# kfac-jax

./: CONTRIBUTING.md  MANIFEST.in  README.md  pylintrc.toml  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_examples.txt  requirements_tests.txt  setup.py  test.sh
.github/workflows/: ci.yml  pypi-publish.yml
docs/: advanced.rst  api.rst  conf.py  guides.rst  index.rst  overview.rst
docs/ext/: coverage_check.py
examples/: README.md  datasets.py  losses.py  optax_preconditioner.py  optax_wrapper.py  optimizers.py  schedules.py  training.py
examples/autoencoder_mnist/: experiment.py  pipeline.py
examples/classifier_mnist/: experiment.py  pipeline.py
examples/lrelunet101_imagenet/: experiment.py  pipeline.py
examples/resnet50_imagenet/: experiment.py  pipeline.py
kfac_jax/: __init__.py
kfac_jax/_src/: __init__.py  curvature_blocks.py  curvature_estimator.py  layers_and_loss_tags.py  loss_functions.py  optimizer.py  patches_second_moment.py  tag_graph_matcher.py  tracer.py  utils.py
kfac_jax/_src/curvature_blocks/: __init__.py  curvature_block.py  diagonal.py  full.py  kronecker_factored.py  tnt.py  utils.py
kfac_jax/_src/curvature_estimator/: __init__.py  block_diagonal.py  curvature_estimator.py  explicit_exact.py  implicit_exact.py  optax_interface.py
kfac_jax/_src/utils/: __init__.py  accumulators.py  math.py  misc.py  parallel.py  staging.py  types.py
tests/: estimator_test_utils.py  models.py  test_estimator.py  test_graph_matcher.py  test_optax_interface.py  test_patches_second_moment.py  test_tracer.py  test_utils.py
